# alloy-cli

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  hil.yml  perf.yml  release.yml
AI_INTEGRATION/: index.html
ARCHITECTURE/: index.html
CHEATSHEET/: index.html
COMPARISON/: index.html
CONTRIBUTING/: index.html
DATA_SOURCES/: index.html
ERROR_COOKBOOK/: index.html
EXAMPLES/01-blinky/: alloy.toml  index.html
EXAMPLES/02-uart-echo/: alloy.toml  index.html
EXAMPLES/03-spi-flash/: alloy.toml  index.html
EXAMPLES/04-dma-double-buffer/: alloy.toml  index.html
PROJECT_FORMAT/: index.html
QUICKSTART/: index.html
RECOVERY/: index.html
RELEASING/: index.html
REVIEW/: index.html
ROADMAP/: index.html
ROADMAP_WAVE_2/: index.html
ROADMAP_WAVE_3/: index.html
TOOLCHAIN_INSTALLER/: index.html
TOOLCHAIN_ONBOARDING/: index.html
TOOLCHAIN_REGISTRY/: index.html
TUI_DESIGN/: index.html
VISION/: index.html
api/: index.html
api/errors/: index.html
api/mcp/: index.html
api/probe-orchestrator/: index.html
api/tool-sources/: index.html
api/toolchain-orchestrator/: index.html
api/toolchain-registry/: index.html
architecture/: index.html
architecture/comparison/: index.html
architecture/data-sources/: index.html
architecture/overview/: index.html
architecture/tui-design/: index.html
cheatsheet/: index.html
cmake/: AlloyCli.cmake
concepts/: index.html
concepts/device-ir/: index.html
concepts/lockfile-aware-execution/: index.html
concepts/probe-orchestrator/: index.html
concepts/toolchain-orchestrator/: index.html
concepts/two-phase-mutations/: index.html
contributing/: index.html
contributing/releasing/: index.html
contributing/roadmap/: index.html
cookbook/: index.html
data/families/: arm-cortex-m.yml  esp32.yml  nrf52.yml  rp2040.yml  stm32f4.yml  stm32g0.yml
data/sources/: espressif.json  github.json  probe-rs.json  xpack.json
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  CHEATSHEET.md  COMPARISON.md  CONTRIBUTING.md  DATA_SOURCES.md  ERROR_COOKBOOK.md  PROJECT_FORMAT.md  QUICKSTART.md  RECOVERY.md  RELEASING.md  REVIEW.md  ROADMAP.md  ROADMAP_WAVE_2.md  ROADMAP_WAVE_3.md  TOOLCHAIN_INSTALLER.md  TOOLCHAIN_ONBOARDING.md  TOOLCHAIN_REGISTRY.md  TUI_DESIGN.md  VISION.md  index.md
docs/EXAMPLES/01-blinky/: README.md
docs/EXAMPLES/02-uart-echo/: README.md
docs/EXAMPLES/03-spi-flash/: README.md
docs/EXAMPLES/04-dma-double-buffer/: README.md
docs/api/: errors.md  index.md  mcp.md  probe-orchestrator.md  tool-sources.md  toolchain-orchestrator.md  toolchain-registry.md
docs/concepts/: device-ir.md  index.md  lockfile-aware-execution.md  probe-orchestrator.md  toolchain-orchestrator.md  two-phase-mutations.md
docs/getting-started/: installation.md  your-first-project.md
docs/reference/: cli.md
docs/stylesheets/: extra.css
docs/user-guide/: toolchain.md  tui.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/your-first-project/: index.html
openspec/: project.md
openspec/changes/add-accessibility-suite/: tasks.md
openspec/changes/add-bulk-search-cache/: proposal.md  tasks.md
openspec/changes/add-cli-add-peripheral/: proposal.md  tasks.md
openspec/changes/add-cli-boards-and-devices/: tasks.md
openspec/changes/add-cli-build-flash-debug/: proposal.md  tasks.md
openspec/changes/add-cli-new/: tasks.md
openspec/changes/add-clock-profile-persistence/: proposal.md  tasks.md
openspec/changes/add-codegen-integration/: proposal.md  tasks.md
openspec/changes/add-docs-site/: design.md  tasks.md
openspec/changes/add-doctor-update-export/: tasks.md
openspec/changes/add-event-log-writer/: proposal.md  tasks.md
openspec/changes/add-export-ci-toolchain-matrix/: proposal.md  tasks.md
openspec/changes/add-mcp-server/: tasks.md
openspec/changes/add-onboarding-wizard/: design.md  tasks.md
openspec/changes/add-perf-budgets/: proposal.md  tasks.md
openspec/changes/add-quickstart-and-cookbook/: tasks.md
openspec/changes/add-real-update-pipeline/: tasks.md
quickstart/: index.html
recovery/: index.html
reference/cheatsheet/: index.html
reference/cli/: index.html
reference/errors/: index.html
roadmap/: index.html
schema/: alloy_toml_v1.json  alloy_toml_v1_1.json  family_toolchain_v1.json  source_manifest_v1.json
scripts/: check_error_cookbook.py  check_family_doc_links.py  generate_cheatsheet.py  generate_docs_images.py  refresh_source_pins.py
search/: search_index.json
src/alloy_cli/: __init__.py  _version.py  cmake_bridge.py  main.py
src/alloy_cli/core/: gdb.py  (+33 more)
tests/: conftest.py  test_accessibility.py  test_architecture_doc_sync.py  test_boards.py  test_build.py  test_bulk_search_cache.py  test_clock_profiles.py  test_cmake_bridge.py  test_codegen.py  test_command_add.py  test_command_boards_devices.py  test_command_build_flash_debug.py  test_command_chat.py  test_command_erase.py  test_command_monitor.py  test_command_new.py  test_command_reset.py  test_command_setup.py  test_command_toolchain.py  test_debug.py  test_debug_screen.py  test_diagnose_family.py  test_docs_site_build.py  test_docs_site_ia.py  test_docs_site_links.py  test_doctor_for_flag.py  test_doctor_screen.py  test_doctor_toolchain_fix.py  test_doctor_update_export.py  test_error_handling_narrowing.py  test_errors_uniqueness.py  test_event_log_writer.py  test_export_ci_toolchain_matrix.py  test_family_toolchain_schema.py  test_flash.py  test_gdb_session.py  test_help.py  test_injection_seams.py  test_ir.py  test_lockfile.py  (+38 more)
tests/perf/: __init__.py  _budgets.py  conftest.py  test_add.py  test_cli_startup.py  test_mcp_tools.py  test_search.py  test_tui_startup.py
tests/snapshots/: __init__.py  _compare.py  _render.py
user-guide/ai-integration/: index.html
user-guide/recovery/: index.html
user-guide/toolchain/: index.html
user-guide/tui/: index.html
vision/: index.html
(+224 files in other folders)
