[build-system]
requires = ["hatchling>=1.21", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "alloy-cli"
description = "The terminal-native developer surface for the Alloy embedded platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Alloy Embedded" }]
keywords = ["embedded", "firmware", "stm32", "esp32", "rp2040", "tui", "cli", "mcp"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # CLI surface
    "click>=8.1",
    # Rich text / non-interactive output
    "rich>=13.7",
    # Interactive TUI
    "textual>=0.80",
    # Schema validation
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    # Project format
    "tomli>=2.0; python_version < '3.11'",
    # Subprocess + plumbing
    "platformdirs>=4.2",
    # Project scaffolding (alloy new)
    "jinja2>=3.1",
]
dynamic = ["version"]

[project.optional-dependencies]
mcp = [
    # MCP SDK once stable; pinned to the official Anthropic Python MCP SDK.
    "mcp>=0.10",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=5",
    "pytest-textual-snapshot>=0.4",
    "ruff>=0.5",
    "pyright>=1.1",
    "mypy>=1.10",
]

[project.scripts]
alloy = "alloy_cli.main:main"

[project.urls]
Homepage = "https://github.com/Alloy-Embedded/alloy-cli"
Repository = "https://github.com/Alloy-Embedded/alloy-cli"
Changelog = "https://github.com/Alloy-Embedded/alloy-cli/blob/main/CHANGELOG.md"
Issues = "https://github.com/Alloy-Embedded/alloy-cli/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/alloy_cli/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/alloy_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"schema/alloy_toml_v1.json"        = "alloy_cli/schema/alloy_toml_v1.json"
"schema/alloy_toml_v1_1.json"      = "alloy_cli/schema/alloy_toml_v1_1.json"
"schema/family_toolchain_v1.json"  = "alloy_cli/schema/family_toolchain_v1.json"
"schema/source_manifest_v1.json"   = "alloy_cli/schema/source_manifest_v1.json"
"cmake/AlloyCli.cmake"             = "alloy_cli/cmake/AlloyCli.cmake"
"data/families/arm-cortex-m.yml"   = "alloy_cli/data/families/arm-cortex-m.yml"
"data/families/stm32f4.yml"        = "alloy_cli/data/families/stm32f4.yml"
"data/families/stm32g0.yml"        = "alloy_cli/data/families/stm32g0.yml"
"data/families/rp2040.yml"         = "alloy_cli/data/families/rp2040.yml"
"data/families/nrf52.yml"          = "alloy_cli/data/families/nrf52.yml"
"data/families/esp32.yml"          = "alloy_cli/data/families/esp32.yml"
"data/sources/xpack.json"          = "alloy_cli/data/sources/xpack.json"
"data/sources/github.json"         = "alloy_cli/data/sources/github.json"
"data/sources/probe-rs.json"       = "alloy_cli/data/sources/probe-rs.json"
"data/sources/espressif.json"      = "alloy_cli/data/sources/espressif.json"

[tool.hatch.build.targets.wheel.force-include]
"schema/alloy_toml_v1.json"        = "src/alloy_cli/schema/alloy_toml_v1.json"
"schema/alloy_toml_v1_1.json"      = "src/alloy_cli/schema/alloy_toml_v1_1.json"
"schema/family_toolchain_v1.json"  = "src/alloy_cli/schema/family_toolchain_v1.json"
"schema/source_manifest_v1.json"   = "src/alloy_cli/schema/source_manifest_v1.json"
"cmake/AlloyCli.cmake"             = "src/alloy_cli/cmake/AlloyCli.cmake"
"data/families/arm-cortex-m.yml"   = "src/alloy_cli/data/families/arm-cortex-m.yml"
"data/families/stm32f4.yml"        = "src/alloy_cli/data/families/stm32f4.yml"
"data/families/stm32g0.yml"        = "src/alloy_cli/data/families/stm32g0.yml"
"data/families/rp2040.yml"         = "src/alloy_cli/data/families/rp2040.yml"
"data/families/nrf52.yml"          = "src/alloy_cli/data/families/nrf52.yml"
"data/families/esp32.yml"          = "src/alloy_cli/data/families/esp32.yml"
"data/sources/xpack.json"          = "src/alloy_cli/data/sources/xpack.json"
"data/sources/github.json"         = "src/alloy_cli/data/sources/github.json"
"data/sources/probe-rs.json"       = "src/alloy_cli/data/sources/probe-rs.json"
"data/sources/espressif.json"      = "src/alloy_cli/data/sources/espressif.json"

# `src/alloy_cli/integrations/opencode/` (templates, MCP recipes, system prompt)
# ships automatically as package data via `packages = ["src/alloy_cli"]`.

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/alloy_cli/_version.py"]  # hatch-vcs generated

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "BLE"]
ignore = ["E501"]  # rely on formatter

[tool.ruff.lint.per-file-ignores]
# Textual idioms: BINDINGS / DEFAULT_CSS are framework-recognised class
# attributes that are intentionally mutable list/str literals.
"src/alloy_cli/tui/**/*.py" = ["RUF012"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
# Strict typing across the package is the goal but lands incrementally
# via a dedicated proposal once the API surface stabilises.  For now we
# rely on basic-mode + ruff's type-aware lints.
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"

